--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-LANGUAGE_KEY = "5c2af3356ca74a55971ee3e2f070a73d"
-LANGUAGE_ENDPOINT = "https://sentimentalanalysisbysalim.cognitiveservices.azure.com"
+LANGUAGE_KEY = "BLANK"
+LANGUAGE_ENDPOINT = "BLANK"
